samples/_failures_safe/1761212022_1678d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d0b30fc.c: In function ‘main’:
./samples/SAFE/__tmp_9d0b30fc.c:155:32: error: missing terminating " character
  155 |                         printf("%s [%s] %s
      |                                ^~~~~~~~~~~
./samples/SAFE/__tmp_9d0b30fc.c:155:25: error: expected expression at end of input
  155 |                         printf("%s [%s] %s
      |                         ^~~~~~
./samples/SAFE/__tmp_9d0b30fc.c:155:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d0b30fc.c:155:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d0b30fc.c:155:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d0b30fc.c:155:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d0b30fc.c:155:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d0b30fc.c:155:25: error: expected declaration or statement at end of input
